[package]
name = "rust-pcap-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
rust-pcap-common = { path = "../rust-pcap-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
hex = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "rust-pcap"
path = "src/main.rs"
